# obs-studio

UI/frontend-plugins/: CMakeLists.txt
UI/frontend-plugins/simple-edit/: CMakeLists.txt  simple-edit-module.c  simple-edit.cpp  simple-edit.h
